feat: Create user crud APIs
