# app/Http/Requests/StoreUserRequest.php
@@ -1,0 +1,51 @@
+<?php
+
+/*
+ * @copyright (c) 2025 Pragith Lakshan Thilakarathna
+ * All rights reserved. 
+ * This code is proprietary to CJNextGenSys. 
+ * Unauthorized use, reproduction, modification, distribution, or sale 
+ * without the explicit written permission of CJNextGenSys is strictly prohibited.
+ * For inquiries, please contact: [info@cjnextgensys.com]
+*/
+
+namespace App\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Validation\Rule;
+
+/**
+ * @OA\Schema(
+ *     schema="StoreUserRequest",
+ *     type="object",
+ *     title="User Create Request",
+ *     required={"name", "email", "password"},
+ *     @OA\Property(property="name", type="string", example="samantha"),
+ *     @OA\Property(property="email", type="string", example="samantha@example.com"),
+ *     @OA\Property(property="password", type="string", example="samantha123ABC"),
+ * )
+ */
+class StoreUserRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'name' => ['required', 'max:255'],
+            'email' => ['required', 'max:255', 'email', Rule::unique('users', 'email')],
+            'password' => ['required', 'max:255']
+        ];
+    }
+}
