# app/Http/Resources/UserResource.php
@@ -1,0 +1,50 @@
+<?php
+
+/*
+ * @copyright (c) 2025 Pragith Lakshan Thilakarathna
+ * All rights reserved. 
+ * This code is proprietary to CJNextGenSys. 
+ * Unauthorized use, reproduction, modification, distribution, or sale 
+ * without the explicit written permission of CJNextGenSys is strictly prohibited.
+ * For inquiries, please contact: [info@cjnextgensys.com]
+*/
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+
+/**
+ * @OA\Schema(
+ *     schema="UserResource",
+ *     type="object",
+ *     title="User Resource",
+ *     @OA\Property(property="id", type="integer", format="int64", example="1"),
+ *     @OA\Property(property="name", type="string", example="samantha"),
+ *     @OA\Property(property="email", type="string", example="samantha@example.com"),
+ * )
+ */
+class UserResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'id' => $this->id,
+            'name' => $this->name,
+            'email' => $this->email
+        ];
+    }
+
+    public function with(Request $request)
+    {
+        return [
+            'success' => true
+        ];
+    }
+}
